package io.github.team10.escapefromuni;

public enum DoorDirection {

}
